Fixed spacing of text on Portfolio page

--- a/main.css
+++ b/main.css
@@ -235,7 +235,7 @@
   }
 
   .bullet {
-    margin: 2% 5% 2% 7%;
+    margin: 0% 5% 0% 7%;
   }
 
   #hero-leaf {
